--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -67,6 +67,7 @@ section.normal {
 }
 
 section.imagem {
+    
     background-color: rgb(51, 51, 51);
     color: #ffffff;
 }
@@ -77,6 +78,22 @@ section.imagem > p {
     padding: 5px;
 }
 
+#q1{
+    background-image: url(imagens/background001.jpg);
+    background-size: 100% 100%; 
+
+    background-attachment: fixed;
+    
+    
+}
+
+
+#q2 {
+    background-image: url(imagens/background002.jpg);
+    background-size: 100% 100%; 
+
+    background-attachment: fixed;
+}
 footer{
     background-color: black;
     color: white;
