--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -67,31 +67,36 @@ section.normal {
 }
 
 section.imagem {
-    
-    background-color: rgb(51, 51, 51);
+    background-color: rgba(51, 51, 51, 0.712);
     color: #ffffff;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.521);
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.253);
     padding: 5px;
+    background-color: rgba(0, 0, 0, 0.705);
+    text-shadow: 1px 1px 1px 0px black;
 }
 
+section > p {
+    padding: 2em;
+}
 #q1{
     background-image: url(imagens/background001.jpg);
-    background-size: 100% 100%; 
-
+    background-position: right center;
+    background-size: cover; 
     background-attachment: fixed;
     
     
 }
 
 
+
 #q2 {
     background-image: url(imagens/background002.jpg);
-    background-size: 100% 100%; 
-
+    background-position: right center;
+    background-size: cover; 
     background-attachment: fixed;
 }
 footer{
