--- a/exercicios/ex024/mq004/estilos/style.css
+++ b/exercicios/ex024/mq004/estilos/style.css
@@ -17,6 +17,7 @@ body {
     background: black url(../imagens/back-phone.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
+    background-attachment: fixed;
 }
 
 main {
