--- a/exercicios/ex024/mq005/estilos/style.css
+++ b/exercicios/ex024/mq005/estilos/style.css
@@ -19,8 +19,21 @@ header > h1 {
     padding: 10px;
 }
 
-menu {
+span#burguer {
+    background-color: rgb(43, 43, 43);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
+}
+menu {
+    display: none;
 }
 
 menu > ul {
