--- a/desafios/d011/style.css
+++ b/desafios/d011/style.css
@@ -51,6 +51,24 @@ header > h1 {
     text-shadow: 2px 2px 2px 0px rgb(194, 194, 194);
 }
 
+span#burguer {
+    background-color: rgb(43, 43, 43);
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+nav {
+    display: none;
+}
+
 header > p {
     font-family: var(--fonte-padrão);
     font-size: 1.2em;
@@ -204,3 +222,4 @@ footer a:hover {
     color: blueviolet;
     font-weight: 600;
 }
+
